[STD-115] Material file - Inspection of files